---
source: tests/parser/main.rs
description: "// Input file:\nlibsl \"1.0.0\";\n\nlibrary empty_incl;\n\n// include declarations must specify a path.\ninclude    ;\n"
input_file: tests/parser/test-data/empty-include.libsl
---
Err("encountered a syntax error at L6:11: mismatched input \';\' expecting {StringLit, BarePath}")
